# cope_chatbot

./: README.md  pyproject.toml
logs/: 2025-03-10_14-04-26_edit_task.md  2025-03-10_14-04-26_newsletter_task.html  2025-03-10_14-04-26_research_task.md  2025-03-10_14-51-05_edit_task.md  2025-03-10_14-51-05_research_task.md  2025-03-11_11-57-59_edit_task.md  2025-03-11_11-57-59_newsletter_task.html  2025-03-11_11-57-59_research_task.md  2025-03-11_13-11-46_edit_task.md  2025-03-11_13-11-46_newsletter_task.html  2025-03-11_13-11-46_research_task.md
src/multiagent/: crew.py  main.py
src/multiagent/config/: agents.yaml  newsletter_template.html  tasks.yaml
src/multiagent/tools/: custom_tool.py
