[project]
name = "multiagent"
version = "0.1.0"
description = "multiagent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
multiagent = "multiagent.main:run"
run_crew = "multiagent.main:run"
train = "multiagent.main:train"
replay = "multiagent.main:replay"
test = "multiagent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
